# MERL-T_alpha

./: .dockerignore  .env.production.template  .env.template  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.streamlit  LICENSE  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.distributed.yml  docker-compose.prod.yml  docker-compose.yml  dump.rdb  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-rlcf.txt  requirements.txt  setup.py  simulation.html  test_infrastructure_imports.py  test_query.json
.github/: pull_request_template.md
apps/: config_manager.py  expert_debugger.py  rlcf_dashboard.py
backend/: __init__.py
docker/: Dockerfile.expert  Dockerfile.orchestration  Dockerfile.rlcf  Dockerfile.storage  README.md
docs/: IMPLEMENTATION_ROADMAP.md  README.md  TECHNOLOGY_RECOMMENDATIONS.md  bibliografia.md  falkordb-queries.md
merlt/: __init__.py
migrations/: 001_create_orchestration_tables.sql
postman/: MERL-T_API.postman_collection.json  MERL-T_API.postman_environment.json  README.md
quickstart/: CHEATSHEET.md  QUICK_START.md  README.md  cleanup-hard.sh  cleanup.sh  restart-dev.sh  start-dev.sh  stop-dev.sh  test-system.sh
scripts/: apply_multivigenza_cp.py  batch_enrich_brocardi.py  batch_ingest_libro_iv.py  embed_massime.py  exp007_full_ingestion.py  exp014_full_ingestion.py  exp015_rag_benchmark.py  exp016_semantic_benchmark.py  exp018_expert_comparison.py  exp019_e2e_pipeline.py  exp020_scientific_evaluation.py  export_experiment.py  generate_embeddings.py  generate_ground_truth_cp.py  generate_postman_collection.py  import_experiment.py  ingest_241_multivigenza.py  ingest_art_1453_1456.py  ingest_costituzione.py  ingest_legal_corpus.py  ingest_libro_iv_cc.py  ingest_libro_primo_cp.py  init_environments.py  kill_ports.sh  migrate_database.py  reembed_articles.py  (+13 more)
(+768 files in other folders)
