[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "merlt"
version = "0.1.0"
description = "Libreria Python per l'informatica giuridica italiana"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "MERL-T Team"}
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Legal Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["legal", "knowledge-graph", "italian-law", "NLP", "RAG"]

dependencies = [
    "aiohttp>=3.8.0",
    "aiocache>=0.12.0",
    "beautifulsoup4>=4.12.0",
    "falkordb>=1.0.0",
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.2.0",
    "structlog>=23.0.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
all = [
    "selenium>=4.0.0",
    "openai>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/your-org/merlt"
Documentation = "https://github.com/your-org/merlt#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["merlt*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = false
warn_unused_ignores = true
